# autoTrip

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  print_paths.py  pyproject.toml  release_notes_v1.0.0.md  requirements.txt  test.html  test2.html  test3.html  test_10am.py  test_6routes.py  test_en.html  test_fare.py  test_merge.py  test_merge2.py  test_osaka.html  test_segment.py  test_translation.py  test_type5.py  test_type5_html.py  test_wakayama.py  test_yahoo.py  trace.py
.github/workflows/: backend-ci.yml
backend/: .env.example  main.py  test3.py  test_translation.py  test_verify.py  trace.py
backend/api/: dependencies.py  schemas.py
backend/api/v1/: health.py  movements.py  search.py  stations.py  timetable.py
backend/application/ports/: cache_port.py  notion_port.py  poi_repository_port.py  scraper_port.py  station_repository_port.py
backend/core/: config.py  exceptions.py  logger.py
backend/data/: bus_stop.csv  poi.csv  station.csv
backend/domain/: enums.py  movement.py  route.py  search.py  station.py  timetable.py
backend/infrastructure/: exceptions.py
backend/scripts/: seed_bus_stop_db.py  seed_poi_db.py  seed_station_db.py
backend/tests/: conftest.py  test_api.py  test_application.py  test_logging.py  test_main.py  test_movement_service.py  test_notion_mapper.py  test_parser.py  test_real_scraper.py  test_search_integration.py  test_sqlite_cache.py  test_station_repository.py
docs/: architecture.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
(+129 files in other folders)
